# MyBiome

./: .CLAUDE.md  .claudeignore  .env  .gitignore  ARCHITECTURE_CLEANUP_ROUND2.md  BATCH_PIPELINE_OPTIMIZATION.md  BUGFIX_LOG.md  CLEANUP_ROUND2_FINAL_REPORT.md  CLEANUP_SUMMARY_2025-10-10.md  CORRELATION_STRENGTH_REMOVAL_STATUS.md  DEBUG_SESSION_SUMMARY.md  DEPRECATED_FILES_LOG.md  DUPLICATE_DETECTION_FIX.md  DUPLICATE_PAIRS_BUG_FIX.md  DUPLICATE_PAIRS_BUG_FIXED.md  FIELD_REMOVAL_SUMMARY.md  FINAL_CLEANUP_PLAN.md  GROUND_TRUTH_CONSOLIDATION_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPORT_DEPENDENCY_ANALYSIS.md  LABELING_TOOL_FIX.md  MIGRATION_SEMANTIC_NORMALIZATION.md  OPTIMIZATION_COMPLETE.md  OPTION_A_IMPLEMENTATION_COMPLETE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_DEBUG_REPORT.md  PHASE2_OPTIMIZATION_SUMMARY.md  PHASE3_INTEGRATION_SUMMARY.md  PHASE3_PROGRESS_UPDATE.md  PHASE3_SCHEMA_INVESTIGATION_REPORT.md  PHASE4_CONFIGURATION_COMPLETE.md  PHASE6_CLEANUP_COMPLETE.md  PIPELINE_DATA_FLOW_ANALYSIS.md  PIPELINE_TEST_LOG.md  README.md  REMOVAL_CHECKLIST.md  REPOSITORY_CLEANUP_OCT2025.md  ROUND2_CLEANUP_COMPLETION_SUMMARY.md  SEMANTIC_NORMALIZATION_CONSOLIDATION_ANALYSIS.md  SESSION_SUMMARY_2025-10-06.md  (+73 more)
.claude/: settings.local.json
back_end/: BUG_FIX_PAPER_COLLECTION_20251009.md  CONSOLIDATION_SUMMARY.md  ORCHESTRATION_GUIDE.md  README.md  ROBUST_PROCESSOR_README.md  admin_cli.py  admin_demo.py  analyze_mapping_suggestions.py  autonomous_research_campaign.py  autonomous_research_orchestrator.py  basic_integration_test.py  batch_migration_demo.py  check_semantic_fields.py  (+89 more)
(+1295 files in other folders)
